--- a/gb/20/1/28/n11827668.md
+++ b/gb/20/1/28/n11827668.md
@@ -1,18 +1,18 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/rfvbv298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rfvbv298/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/rfvbv298/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rfvbv298/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/rfvbv298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rfvbv298/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/rfvbv298/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rfvbv298/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/rfvbv298/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rfvbv298/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/rfvbv298/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rfvbv298/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/rfvbv298/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rfvbv298/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/rfvbv298/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rfvbv298/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/rfvbv298/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/rfvbv298/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/rfvbv298/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/rfvbv298/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/mytgei3586/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/mytgei3586/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/mytgei3586/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/mytgei3586/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/mytgei3586/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>神性内涵让演出更精彩 副总裁喜爱神韵故事</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/01/2001251835202153-600x400.jpg" />
 <h6>市场研究公司Campos的副总裁Michael Dufault和太太、女儿于1月25日下午观看了神韵新纪元艺术团在匹兹堡本尼德表演艺术中心的第二场演出。（良克霖／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2020年01月28日讯】（大纪元记者良克霖美国匹兹堡报导）1月25日中国新年初一的下午，<a href="https://github.com/rfvbv298/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>新纪元艺术团在<a href="https://github.com/rfvbv298/djy/blob/master/gb/tag/%E5%8C%B9%E5%85%B9%E5%A0%A1%E6%9C%AC%E5%B0%BC%E5%BE%B7%E8%A1%A8%E6%BC%94%E8%89%BA%E6%9C%AF%E4%B8%AD%E5%BF%83.md">匹兹堡本尼德表演艺术中心</a>（The Benedum Center for the Performing Arts）的第二场演出爆满。神韵丰富多彩的节目所展现的传统文化与深邃的神性内涵，令匹兹堡主流精英赞佩。</p>
+	<p>【大纪元2020年01月28日讯】（大纪元记者良克霖美国匹兹堡报导）1月25日中国新年初一的下午，<ahref="https://github.com/mytgei3586/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>新纪元艺术团在<ahref="https://github.com/mytgei3586/djy/blob/master/gb/tag/%E5%8C%B9%E5%85%B9%E5%A0%A1%E6%9C%AC%E5%B0%BC%E5%BE%B7%E8%A1%A8%E6%BC%94%E8%89%BA%E6%9C%AF%E4%B8%AD%E5%BF%83.md#1">匹兹堡本尼德表演艺术中心</a>（The Benedum Center for the Performing Arts）的第二场演出爆满。神韵丰富多彩的节目所展现的传统文化与深邃的神性内涵，令匹兹堡主流精英赞佩。</p>
 <p>市场研究公司Campos的副总裁Michael Dufault携太太和女儿观看了当天下午的演出。看完演出后他说：“我非常喜欢演出包括了很多的故事，讲故事的方式也很吸引人。动态天幕令人啧啧称奇！”</p>
-<p>曾经弹过吉他的Dufault很喜欢<a href="https://github.com/rfvbv298/djy/blob/master/gb/tag/%E9%9F%B3%E4%B9%90.md">音乐</a>。他称赞：“<a href="https://github.com/rfvbv298/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>的<a href="https://github.com/rfvbv298/djy/blob/master/gb/tag/%E9%9F%B3%E4%B9%90.md">音乐</a>完美无瑕。由中西乐器组合演奏的交响乐与舞蹈配合得天衣无缝。”</p>
-<p>Dufault表示他们一家都是有<a href="https://github.com/rfvbv298/djy/blob/master/gb/tag/%E4%BF%A1%E4%BB%B0.md">信仰</a>的，“信仰对我们来说很重要。”神韵展现了中国五千年神传文化，以及敬天信神的深邃内涵。这让Dufault着迷。他说：“我们都非常喜欢演出中有关信仰的内容。这让整个演出更加精彩。”</p>
-<p>“我很喜欢演出中有关轮回的信息。”Dufault说：“今天很高兴能够了解到中国人的<a href="https://github.com/rfvbv298/djy/blob/master/gb/tag/%E4%BF%A1%E4%BB%B0.md">信仰</a>，而中国人的信仰比基督教的历史要长很多。所以很棒！”</p>
+<p>曾经弹过吉他的Dufault很喜欢<ahref="https://github.com/mytgei3586/djy/blob/master/gb/tag/%E9%9F%B3%E4%B9%90.md#1">音乐</a>。他称赞：“<ahref="https://github.com/mytgei3586/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>的<ahref="https://github.com/mytgei3586/djy/blob/master/gb/tag/%E9%9F%B3%E4%B9%90.md#1">音乐</a>完美无瑕。由中西乐器组合演奏的交响乐与舞蹈配合得天衣无缝。”</p>
+<p>Dufault表示他们一家都是有<ahref="https://github.com/mytgei3586/djy/blob/master/gb/tag/%E4%BF%A1%E4%BB%B0.md#1">信仰</a>的，“信仰对我们来说很重要。”神韵展现了中国五千年神传文化，以及敬天信神的深邃内涵。这让Dufault着迷。他说：“我们都非常喜欢演出中有关信仰的内容。这让整个演出更加精彩。”</p>
+<p>“我很喜欢演出中有关轮回的信息。”Dufault说：“今天很高兴能够了解到中国人的<ahref="https://github.com/mytgei3586/djy/blob/master/gb/tag/%E4%BF%A1%E4%BB%B0.md#1">信仰</a>，而中国人的信仰比基督教的历史要长很多。所以很棒！”</p>
 <h2>地产经理赞：出类拔萃的演出</h2>
-<figure id="attachment_11824528" style="width: 450px" class="wp-caption aligncenter"><a href="https://i.epochtimes.com/assets/uploads/2020/01/2001260033242153.jpg"><img class="wp-image-11824528 size-medium" src="https://i.epochtimes.com/assets/uploads/2020/01/2001260033242153-450x301.jpg" alt="" width="450" b="301" /></a><figcaption class="wp-caption-text">2020年1月25日晚，地产经理Dave Colton（右）与美发师Joanne Alexi表示，看神韵让他们感到心旷神怡。（良克霖／大纪元）</figcaption></figure>
+<figure id="attachment_11824528" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/01/2001260033242153.jpg"><img class="wp-image-11824528 size-medium" src="https://i.epochtimes.com/assets/uploads/2020/01/2001260033242153-450x301.jpg" alt="" width="450" b="301" /></a><figcaption class="wp-caption-text">2020年1月25日晚，地产经理Dave Colton（右）与美发师Joanne Alexi表示，看神韵让他们感到心旷神怡。（良克霖／大纪元）</figcaption></figure>
 <p>地产经理Dave Colton在看完神韵演出后兴奋地说：“色彩、舞蹈都出类拔萃，都非常棒，非常出色！”</p>
 <p>“整个演出，以及每个节目没有任何瑕疵，无可挑剔，节奏也完美无缺。”Colton对神韵的赞美溢于言表，“色彩艳丽，天幕场景非常丰富多彩。”</p>
 <p>Colton表示，神韵舞蹈家精湛的技艺让他印象深刻，“编舞非常专业，演员的默契配合完美无瑕。”</p>
@@ -23,38 +23,46 @@
 	
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/20/1/28/n11827668.htm">神性内涵让演出更精彩 副总裁喜爱神韵故事</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/28/n11827428.htm">陆客赴台旅游被确诊武汉肺炎 台湾个案达7例</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/27/n11826224.htm">武汉肺炎疫情扩大 美国发布最高级旅行警告</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/27/n11826307.htm">武汉肺炎 传湖北孝感200名空降兵被隔离</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/27/n11826171.htm">遭武汉肺炎重创 大陆在线旅游平台出乱象</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/27/n11825853.htm">武汉肺炎 火化人数知多少？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/26/n11823680.htm">忧武汉肺炎 西南航空将流感症状乘客撤离航班</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/27/n11825983.htm">【新闻看点】北京半封城 中南海6动作民心尽失</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/27/n11825853.htm">武汉肺炎 火化人数知多少？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/27/n11826405.htm">拒向台湾提供疫情资讯 国际民航组织遭谴责</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/27/n11825817.htm">从习不担任疫情组长看高层运作内幕</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/20/n11807585.htm">2020庚子年国运命理探讨与前瞻</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/17/n11801163.htm">除旧布新 怎样贴春联春贴不犯禁忌？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/9/n11779463.htm">【命理】一朝天子一朝臣 天命所定</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/22/n11812177.htm">初三民间故事　老鼠娶亲</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/26/n11822832.htm">关心武汉封城惨况 台女星：愿大家都平安</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/26/n11823229.htm">武汉肺炎蔓延 刘德华第三度取消演唱会</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/27/n11825293.htm">Kobe骤逝 艺声、雨琦等K-POP明星痛心悼念</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/27/n11825930.htm">传奇球星科比·布莱恩特骤逝 演艺圈众星悼念</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/27/n11824295.htm">TWICE彩瑛电话遭公开 吁莫将错误以关爱包装</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/27/n11825983.htm">【新闻看点】北京半封城 中南海6动作民心尽失</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/26/n11823762.htm">【新闻看点】百年未见热核瘟疫 民众如何自救</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/12/9/n11711310.htm">【思想领袖】假新闻与主流媒体双重标准</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/26/n11821729.htm">武汉市民：本以为逃出就是胜利 却遇围追堵截</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/26/n11823668.htm">捐赠者指医疗物资被红会切断 官员也抢夺物资</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/26/n11821688.htm">【视频】疫情紧急 武汉小伙向国际求助</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/1/26/n11822810.md#1">神韵感动匹兹堡 中国新年两场演出皆爆满</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/1/26/n11822890.md#1">爱上中国历史文化 能源公司经理收获惊喜</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/1/26/n11823069.md#1">公司老板推荐神韵：超乎想像 千万不要错过</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/1/26/n11823267.md#1">国际会展华裔主管赞神韵弘扬中国传统文化</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12560047.md#1">担保SAT1520分 Y2学院优惠高达$1500</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/16/n12554148.md#1">拜登家乡选民特拉华州府集会吁“停止窃选”</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/rfvbv298/djy/blob/master/gb/20/1/28/n11827668.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/rfvbv298/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/rfvbv298/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/rfvbv298/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/30/n10099688.md#1" target="_blank">共产暴政录：上山下乡运动</a></li><li><a href="https://github.com/mytgei3586/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/4/n10023623.md#1" target="_blank">车祸后30年行走困难 读《转法轮》4个月“开跑”</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/15/n12550540.md#1">因预言中共病毒爆红 印度男孩预示来年天象</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/13/n12546586.md#1">紫微斗数推算  小谈拜登真能登大位吗？</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/16/n12553064.md#1">英男声称被外星人绑架 在太空船上遇到歌星</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/11/n12541883.md#1">突出部之役 巴顿将军的神迹之战</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/17/n12556457.md#1">从《狮子王》经典台词 看天选之王的成长</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12561215.md#1">【新闻大家谈】暗助拜登 中共自认颠覆世界</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12561391.md#1">【重播】川普团队：去除舞弊选票 足以翻转结果</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12561563.md#1">【薇羽看世间】川普团队“抽丝剥茧”</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/18/n12558221.md#1">【大选更新11.18】林伍德：川普将击败所有对手</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/18/n12557575.md#1">计算“邮寄选票”后反超 监察员：应停点邮寄选票</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/18/n12559329.md#1">密歇根韦恩县认证选举结果反转内幕曝光</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/18/n12559155.md#1">孙俪晒六岁女儿毛笔字 小花版千字文字体工整</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/17/n12556222.md#1">珉豪军中回忆有TWICE的歌 感谢女团给士兵力量</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/17/n12556732.md#1">林青霞生日出新书 帖文证实与富商丈夫情未变</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/17/n12557059.md#1">土国表妹确诊染疫 吴凤叹病毒把多国变成地狱</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12560394.md#1">姜素拉怀孕获公司证实 孩子预计明年4月出生</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/18/n12557834.md#1">【美食天堂】4种方法长久保存姜～几个月都新鲜！</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/18/n12557479.md#1">全球最后一只白色长颈鹿 加装GPS追踪器</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/18/n12557985.md#1">45亿年历史陨石砸破屋顶 印尼男子变大富翁</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/17/n12556081.md#1">凡士林不只保湿 有5大妙用 挑选看1点</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/15/n12550494.md#1">冷藏肉与冷冻肉不一样 购买时要睁大眼睛</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/mytgei3586/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/mytgei3586/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/28/n11827668.htm">神性内涵让演出更精彩 副总裁喜爱神韵故事</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/mytgei3586/djy/blob/master/gb/20/1/28/n11827668.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/mytgei3586/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/mytgei3586/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/mytgei3586/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
